--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,54 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  <%
+    socket = [
+    ENV["DATABASE_MYSQL_SOCKET"]
+    ].detect { |f| f && File.exist?(f) }
+    %>
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+  default: &default
+    adapter: mysql2
+    pool: 5
+    timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+  development:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] %>
+    <% if socket %>
+    socket: <%= socket %>
+    <% end %>
+    host: <%= ENV['DATABASE_HOST'] %>
+    port: <%= ENV['DATABASE_PORT'] %>
+    username: <%= ENV['DATABASE_USERNAME'] %>
+    password: <%= ENV['DATABASE_PASSWORD'] %>
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+  test:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME_TEST'] %>
+    <% if socket %>
+    socket: <%= socket %>
+    <% end %>
+    host: <%= ENV['DATABASE_HOST'] %>
+    port: <%= ENV['DATABASE_PORT'] %>
+    username: <%= ENV['DATABASE_USERNAME'] %>
+    password: <%= ENV['DATABASE_PASSWORD'] %>
+
+  production:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] %>
+    <% if socket %>
+    socket: <%= socket %>
+    <% end %>
+    host: <%= ENV['DATABASE_HOST'] %>
+    port: <%= ENV['DATABASE_PORT'] %>
+    username: <%= ENV['DATABASE_USERNAME'] %>
+    password: <%= ENV['DATABASE_PASSWORD'] %>
+
+  staging:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] %>
+    <% if socket %>
+    socket: <%= socket %>
+    <% end %>
+    host: <%= ENV['DATABASE_HOST'] %>
+    port: <%= ENV['DATABASE_PORT'] %>
+    username: <%= ENV['DATABASE_USERNAME'] %>
+    password: <%= ENV['DATABASE_PASSWORD'] %>
